k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdv-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rdv-app
  template:
    metadata:
      labels:
        app: rdv-app
    spec:
      containers:
      - name: rdv-app
        image: rdvfinal-nodejs:latest   # ton image locale
        imagePullPolicy: Never          # <-- ici !
        ports:
        - containerPort: 9090
